Updating the module

--- a/lang/en.lang
+++ b/lang/en.lang
@@ -25,10 +25,10 @@
   | The Original Code is: Elastix Open Source.                           |
   | The Initial Developer of the Original Code is PaloSanto Solutions    |
   +----------------------------------------------------------------------+
-  $Id: en.lang,v 1.1 2012-05-05 06:05:29 Ivan Zenteno ivan.zenteno@infapen.com Exp $ */
+  $Id: en.lang,v 1.1 2012-05-05 12:05:06 Ivan A. Zenteno Aguilar ivan.zenteno@infapen.com Exp $ */
 global $arrLangModule;
 $arrLangModule=array(
-"quotas" => "quotas",
-"form_quota" => "form_quota",
+"Quotas" => "Quotas",
+"Estado" => "Estado",
 );
 ?>
